add simple docs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 server.port=8081
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/api.html
