--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,12 @@
             <version>1.18.12</version>
             <scope>provided</scope>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.2.32</version>
+        </dependency>
+        </dependencies>
 
 
     <build>
