--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,7 @@ spring.datasource.username=l0gark
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 server.port=8081
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/api.html
